# vaerans_ecs_design_artifact

./: .gitignore  AGENTS.md  CLAUDE.md  DX_COMPARISON.md  EXAMPLES_COMPLETION_REPORT.md  EXAMPLES_UPDATE_SUMMARY.md  GPU_CHANGES_SUMMARY.md  GPU_SETUP.md  HADAMARD_FIX_SUMMARY.md  HADAMARD_STATUS.md  IMPLEMENTATION_STATUS.md  PHASE_11_SUMMARY.md  PHASE_6_7_8_12_SUMMARY.md  PROJECT_PROGRESS.md  README.md  README.txt  SDK_REVIEW.md  SESSION_SUMMARY.md  SOFTWARE_DESIGN.md  plan.md  pyproject.toml  requirements.txt  test_compress_decompress_fix.py  test_cuda_setup.py  test_full_compress_with_hadamard.py  test_hadamard_fix.py  vaerans_ecs.toml.example
examples/: COLAB_SETUP.md  README.md  batch_pipeline.py  fluent_api_complete.py  full_pipeline_example.py  klt_latent4.npz  learn_klt_latent4.py  metrics_example.py  pipeline_example.py  quickstart_api.py  test_real_vae.py  tutorial.ipynb
tests/: test_api.py  test_arena.py  test_components.py  test_hadamard_channels_output.py  test_pipeline.py  test_serialization.py  test_system.py  test_world.py
tests/fixtures/: create_dummy_models.py  dummy_vae_decoder.onnx  dummy_vae_encoder.onnx  vaerans_ecs_sdxl.toml  vaerans_ecs_test.toml
tests/integration/: test_full_pipeline.py
tests/test_systems/: test_ans.py  test_hadamard.py  test_linear4.py  test_metrics.py  test_quantize.py  test_vae.py  test_wavelet.py
vaerans_ecs/: __init__.py  api.py
vaerans_ecs/components/: entropy.py  image.py  latent.py  quant.py  residual.py  wavelet.py
vaerans_ecs/core/: arena.py  pipeline.py  serialization.py  system.py  world.py
vaerans_ecs/eval/: __init__.py  hadamard.py  linear4.py
vaerans_ecs/systems/: ans.py  hadamard.py  linear4.py  metrics.py  quantize.py  vae.py  wavelet.py
